Revamp index.html for The Fort Bookstore
Updated the HTML structure and content for The Fort Bookstore website, adding metadata, styles, and sections to enhance the user experience.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,140 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Hello World</h1>
-            <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Fort Bookstore</title>
+  <meta name="description" content="The Fort Bookstore is an independent online bookstore with access to Ingram's vast catalog, offering curated titles, indie books, and special orders.">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BookStore",
+    "name": "The Fort Bookstore",
+    "url": "https://bookshop.org/shop/thefort",
+    "description": "The Fort Bookstore is an independent online bookstore with access to Ingram's vast catalog, offering curated titles, indie books, and special orders.",
+    "priceRange": "$$",
+    "knowsAbout": [
+      "Ingram catalog",
+      "Special orders",
+      "Indie books",
+      "Hard-to-find titles",
+      "Curated reading lists"
+    ],
+    "potentialAction": {
+      "@type": "VisitAction",
+      "target": "https://bookshop.org/shop/thefort"
+    }
+  }
+  </script>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Georgia, serif;
+      background-color: #fdf8f2;
+      color: #2c2c2c;
+      line-height: 1.8;
+    }
+    header {
+      background-color: #2c2c2c;
+      color: #fdf8f2;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.5em;
+      letter-spacing: 2px;
+    }
+    header p {
+      font-size: 1.1em;
+      margin-top: 10px;
+      color: #c9b99a;
+    }
+    main {
+      max-width: 800px;
+      margin: 60px auto;
+      padding: 0 20px;
+    }
+    section {
+      margin-bottom: 50px;
+    }
+    h2 {
+      font-size: 1.5em;
+      margin-bottom: 15px;
+      color: #5a3e2b;
+      border-bottom: 2px solid #c9b99a;
+      padding-bottom: 8px;
+    }
+    p {
+      font-size: 1.05em;
+      margin-bottom: 15px;
+    }
+    .cta-button {
+      display: inline-block;
+      background-color: #5a3e2b;
+      color: #fdf8f2;
+      padding: 14px 30px;
+      text-decoration: none;
+      font-size: 1.1em;
+      border-radius: 4px;
+      margin-top: 10px;
+      transition: background-color 0.3s;
+    }
+    .cta-button:hover {
+      background-color: #7a5c3e;
+    }
+    .cta-section {
+      text-align: center;
+      background-color: #f0e6d6;
+      padding: 40px 20px;
+      border-radius: 8px;
+    }
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      background-color: #2c2c2c;
+      color: #c9b99a;
+      font-size: 0.9em;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>The Fort Bookstore</h1>
+    <p>Independent. Curated. Boundless.</p>
+  </header>
+
+  <main>
+
+    <section>
+      <h2>About Us</h2>
+      <p>The Fort Bookstore is an independent online bookstore built for readers who care about where their books come from. We believe that buying a book is more than a transaction — it's a choice to support independent bookselling, authors, and the stories that matter.</p>
+      <p>Through our partnership with Bookshop.org, we offer a carefully curated selection of titles alongside access to Ingram's vast catalog — one of the world's largest book distributors. Whether you're looking for a bestseller, a hard-to-find indie title, or something off the beaten path, The Fort Bookstore can source it for you.</p>
+    </section>
+
+    <section>
+      <h2>What We Offer</h2>
+      <p><strong>Curated titles:</strong> Hand-selected books across fiction, nonfiction, and beyond — chosen with care and intention.</p>
+      <p><strong>Ingram catalog access:</strong> Through Ingram's extensive distribution network, we can source thousands of titles including indie press books, small publisher releases, and hard-to-find reads.</p>
+      <p><strong>Special orders:</strong> Can't find what you're looking for? We can source it. Our access to Ingram's catalog means an enormous range of titles is within reach.</p>
+      <p><strong>Support indie bookselling:</strong> Every purchase through The Fort Bookstore supports independent bookselling and helps sustain a literary community outside the big-box ecosystem.</p>
+    </section>
+
+    <section class="cta-section">
+      <h2>Browse Our Store</h2>
+      <p>Visit The Fort Bookstore on Bookshop.org to explore our curated collection and place your order.</p>
+      <a href="https://bookshop.org/shop/thefort" class="cta-button" target="_blank">Shop The Fort Bookstore</a>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>&copy; 2026 The Fort Bookstore. Proudly independent.</p>
+  </footer>
+
+</body>
 </html>
